# Fairy-Subtitle

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.pypi.md  pyproject.toml
examples/: basic_usage.py  chain_usage.py  example.ass  example.itt  example.saa  example.sbv  example.scc  example.stl  example.sub  example.ttml  example.vtt  example_test.sbv  test_usage.py
fairy_subtitle/: __init__.py  block.py  exceptions.py  models.py  parsers.py  subtitle.py
